Fix z-index for Arrow of Strandell

--- a/resources/less/hakija.less
+++ b/resources/less/hakija.less
@@ -878,7 +878,7 @@ and (max-width: @desktop-content-width) {
   height: 16px;
   position: relative;
   overflow: hidden;
-  z-index: 11;
+  z-index: 9;
 }
 
 .application__hakukohde-selection-search-arrow-up:after {
